<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/black"
    tools:context=".sobreActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smText"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginHorizontal="25dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smText2"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginHorizontal="25dp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smText3"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginHorizontal="25dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smText4"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginHorizontal="25dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smText5"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginHorizontal="25dp"/>


</LinearLayout>